# foundationdb-rs

./: .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  codecov.yml  crates.js  flake.nix  help.html  release-plz.toml  search-index.js  settings.html  source-files.js  src-files.js
foundationdb/: CHANGELOG.md  Cargo.toml  README.md  all.html  enum.FdbBindingError.html  enum.RetryDecision.html  fn.boot.html  fn.default_config_path.html  index.html  sidebar-items.js  struct.ConflictingKeyRange.html  struct.Database.html  struct.FdbError.html  struct.KeySelector.html  struct.MaybeCommitted.html  struct.NoopHooks.html  struct.RangeOption.html  struct.RetryableTransaction.html  struct.TransactOption.html  struct.Transaction.html  struct.TransactionCancelled.html  struct.TransactionCommitError.html  struct.TransactionCommitted.html  trait.DatabaseTransact.html  trait.RetryableError.html  trait.RunnerHooks.html  trait.TransactError.html  type.FdbResult.html  type.TransactionResult.html
foundationdb-bench/: CHANGELOG.md  Cargo.toml
foundationdb-bench/src/: lib.rs
foundationdb-bindingtester/: CHANGELOG.md  Cargo.toml
foundationdb-bindingtester/src/: main.rs
foundationdb-gen/: CHANGELOG.md  Cargo.toml
foundationdb-gen/src/: lib.rs
foundationdb-macros/: CHANGELOG.md  Cargo.toml  README.md
foundationdb-macros/src/: lib.rs
foundationdb-profiling/: CHANGELOG.md  Cargo.toml
foundationdb-profiling/fuzz/: Cargo.toml
foundationdb-profiling/src/: errors.rs  lib.rs  parse.rs  parsed_key.rs  protocol_version.rs  raw_event.rs  raw_transaction_profiling_block.rs  scanner.rs
foundationdb-recipes-simulation/: Cargo.toml  README.md  test_ballot_stress.toml  test_leader_election.toml  test_rapid_leadership.toml  test_short_lease.toml  test_strict_mutex.toml
foundationdb-recipes-simulation/src/: leader_election.rs  lib.rs
foundationdb-simulation/: CHANGELOG.md  Cargo.toml  README.md  build.rs
foundationdb-simulation-tracing/: Cargo.toml  README.md
foundationdb-simulation-tracing/src/: lib.rs
foundationdb-simulation/docs/: README.md  fdb_rt.md
foundationdb-simulation/src/: CppWorkload.cpp  FDBWorkload.cpp  FDBWrapper.cpp  bindings.rs  fdb_rt.rs  fdb_wrapper.rs  lib.rs
foundationdb-sys/: CHANGELOG.md  Cargo.toml  build.rs
foundationdb-sys/src/: lib.rs
foundationdb-tuple/: CHANGELOG.md  Cargo.toml  README.md
foundationdb-tuple/src/: element.rs  lib.rs  pack.rs  subspace.rs  versionstamp.rs
foundationdb/api/: fn.disable_stop_on_exit.html  fn.get_max_api_version.html  fn.network_run_error.html  fn.stop_network.html  index.html  sidebar-items.js  struct.FdbApiBuilder.html  struct.NetworkAutoStop.html  struct.NetworkBuilder.html  struct.NetworkRunner.html  struct.NetworkStop.html  struct.NetworkWait.html
foundationdb/database/: struct.Database.html  struct.MaybeCommitted.html  struct.NoopHooks.html  struct.TransactOption.html  trait.DatabaseTransact.html  trait.RunnerHooks.html  trait.TransactError.html
foundationdb/directory/: enum.DirectoryError.html  enum.DirectoryOutput.html  index.html  sidebar-items.js  struct.DirectoryLayer.html  struct.DirectoryPartition.html  struct.DirectorySubspace.html  trait.Directory.html
foundationdb/error/: enum.FdbBindingError.html  enum.RetryDecision.html  struct.FdbError.html  trait.RetryableError.html  type.FdbResult.html
foundationdb/examples/: README.md  atomic-op-counter.rs  blob-with-manifest.rs  blob.rs  class-scheduling.rs  conflict_reporting.rs  hello-world.rs  hello_world.rs  instrumented.rs  key-selector.rs  key_selectors.rs  micro-queue.rs  micro-queue2.rs  multi_version.rs  simple-index.rs  versionstamp.rs
foundationdb/fdb_keys/: index.html  sidebar-items.js  struct.FdbKey.html  struct.FdbKeys.html  struct.FdbKeysIter.html  struct.FdbRowKey.html
foundationdb/future/: index.html  sidebar-items.js  static.CUSTOM_EXECUTOR_HOOK.html  struct.FdbAddress.html  struct.FdbAddresses.html  struct.FdbFuture.html  struct.FdbFutureHandle.html  struct.FdbKey.html  struct.FdbKeyValue.html  struct.FdbKeys.html  struct.FdbSlice.html  struct.FdbValue.html  struct.FdbValues.html  struct.FdbValuesIter.html
foundationdb/keyselector/: struct.KeySelector.html
foundationdb/mapped_key_values/: index.html  sidebar-items.js  struct.FdbMappedKeyValue.html  struct.FdbMappedValue.html  struct.FdbMappedValuesIter.html  struct.MappedKeyValues.html
foundationdb/metrics/: enum.FdbCommand.html  index.html  sidebar-items.js  struct.CounterMetrics.html  struct.MetricKey.html  struct.MetricsReport.html  struct.TimingMetrics.html  struct.TransactionInfo.html  struct.TransactionMetrics.html  type.Labels.html
foundationdb/options/: enum.ConflictRangeType.html  enum.DatabaseOption.html  enum.ErrorPredicate.html  enum.MutationType.html  enum.NetworkOption.html  enum.StreamingMode.html  enum.TransactionOption.html  index.html  sidebar-items.js
foundationdb/recipes/: index.html  sidebar-items.js
foundationdb/src/: api.rs  cluster.rs  database.rs  error.rs  fdb_keys.rs  future.rs  keyselector.rs  lib.rs  mapped_key_values.rs  mem.rs  metrics.rs  tenant.rs  timekeeper.rs  transaction.rs
foundationdb/tenant/: index.html  sidebar-items.js  struct.FDBTenantPrintableInfo.html  struct.FdbTenant.html  struct.TenantInfo.html  struct.TenantManagement.html
foundationdb/tests/: api.rs  api_ub.rs  atomic.rs  database.rs  directory.rs  error.rs  future.rs  get.rs  guard.rs  hca.rs  leader_election.rs  metrics.rs  mixed_network_management.rs  range.rs  ranked_register.rs  run_retry.rs  runner_hooks.rs  tenant.rs  timekeeper.rs  tokio.rs  trace.rs  transaction.rs  tuple.rs  watch.rs
foundationdb/timekeeper/: enum.HintMode.html  fn.hint_version_from_timestamp.html  index.html  sidebar-items.js
foundationdb/transaction/: struct.ConflictingKeyRange.html  struct.RangeOption.html  struct.RetryableTransaction.html  struct.Transaction.html  struct.TransactionCancelled.html  struct.TransactionCommitError.html  struct.TransactionCommitted.html  type.TransactionResult.html
foundationdb/tuple/: enum.Element.html  (+17 more)
(+6793 files in other folders)
