[workspace]
resolver = "2"
members = [
    "foundationdb",
    "foundationdb-tuple",
    "foundationdb-sys",
    "foundationdb-gen",
    "foundationdb-bench",
    "foundationdb-bindingtester",
    "foundationdb-macros",
    "foundationdb-profiling",
    "foundationdb-simulation",
]

[profile.release]
debug = true
