[package]
name = "foundationdb-bench"
version = "0.5.1"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
edition = "2021"
rust-version = "1.58"

description = """
Bindings to the C api for FoundationDB
"""

repository = "https://github.com/foundationdb-rs/foundationdb-rs"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

license = "MIT/Apache-2.0"

[dependencies]
env_logger = "0.10.0"
foundationdb = { version = "*", path = "../foundationdb" }
futures = "0.3.28"
log = "0.4.18"
rand = "0.8.5"
stopwatch = "0.0.7"
structopt = "0.3.26"
