[package]
name = "foundationdb-bench"
version = "0.5.1"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = """
Bindings to the C api for FoundationDB
"""

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

[dependencies]
env_logger = "0.10.0"
foundationdb = { version = "*", path = "../foundationdb" }
futures = "0.3.28"
log = "0.4.18"
rand = "0.8.5"
stopwatch = "0.0.7"
structopt = "0.3.26"
