[package]
name = "bindingtester"
version = "0.8.0"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
    "Pierre Zemb <contact@pierrezemb.fr>"
]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = """
Bindings to the C api for FoundationDB
"""

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

[dependencies]
env_logger = "0.10.0"
foundationdb = { path = "../foundationdb", features = ["uuid", "num-bigint", "fdb-7_1", "embedded-fdb-include", "tenant-experimental"], default-features = false }
foundationdb-sys = { version = "0.8.0", path = "../foundationdb-sys", features = ["embedded-fdb-include"], default-features = false }
futures = "0.3.28"
log = "0.4.18"
num-bigint = "0.4.3"
structopt = "0.3.26"
async-trait = "0.1.68"
