[package]
name = "foundationdb-gen"
version = "0.9.3"
authors = [
    "Jihyun Yu <yjh0502@gmail.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
    "Pierre Zemb <contact@pierrezemb.fr>"
]
edition = "2021"
rust-version = "1.82"

description = """
Binding generation helper for FoundationDB.
"""

documentation = "https://docs.rs/foundationdb"
repository = "https://github.com/foundationdb-rs/foundationdb-rs"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

[package.metadata.docs.rs]
features = ["embedded-fdb-include", "fdb-7_4"]

[badges]
codecov = { repository = "foundationdb-rs/foundationdb-rs", branch = "main", service = "github" }

[features]
default = []
# Use the locally embedded foundationdb fdb.options file
embedded-fdb-include = []
fdb-5_1 = []
fdb-5_2 = []
fdb-6_0 = []
fdb-6_1 = []
fdb-6_2 = []
fdb-6_3 = []
fdb-7_0 = []
fdb-7_1 = []
fdb-7_3 = []
fdb-7_4 = []

[dependencies]
xml-rs = "0.8.26"
