[package]
name = "foundationdb-macros"
version = "0.2.0"
authors = [
    "Pierre Zemb <contact@pierrezemb.fr>"
]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

description = """
Macro definitions used to maintain the FoundationDB's crate
"""

documentation = "https://docs.rs/foundationdb"

readme = "README.md"
keywords = ["foundationdb", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.18", features = ["full"] }
proc-macro2 = "1.0.59"
try_map = "0.3.1"
quote = "1.0.28"
