[package]
name = "foundationdb-profiling"
version = "0.1.0"
authors = [
    "Pierre Zemb <contact@pierrezemb.fr>",
    "Yannick Guern <dev@guern.eu>"
]
edition = "2021"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.88"
foundationdb = { version = "0.9.3", path = "../foundationdb", default-features = false, features = ["fdb-7_4"] }
futures-util = "0.3.31"
thiserror = "2.0.12"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
