[package]
name = "foundationdb-profiling"
version = "0.1.0"
authors = [
    "Pierre Zemb <contact@pierrezemb.fr>",
    "Yannick Guern <dev@guern.eu>"
]
edition = "2021"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
foundationdb = { version = "0.11.0", path = "../foundationdb", default-features = false, features = ["fdb-7_4"] }
futures-util = "0.3.31"
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
