[package]
name = "foundationdb-recipes-simulation"
version = "0.1.0"
edition = "2021"
publish = false
description = "Simulation workloads for FoundationDB recipes"
license = "MIT OR Apache-2.0"

[dependencies]
foundationdb = { path = "../foundationdb", default-features = false, features = ["recipes", "fdb-7_4", "uuid"] }
foundationdb-simulation = { path = "../foundationdb-simulation", features = ["fdb-7_4"] }

[features]
default = ["embedded-fdb-include"]
embedded-fdb-include = [
    "foundationdb/embedded-fdb-include",
    "foundationdb-simulation/embedded-fdb-include",
]

[lib]
crate-type = ["cdylib"]
