[package]
name = "foundationdb-simulation"
version = "0.2.2"
edition = "2021"
description = """
Embed Rust code within FoundationDB's simulation
"""
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/foundationdb-simulation"
repository = "https://github.com/foundationdb-rs/foundationdb-rs"
readme = "README.md"
keywords = ["foundationdb", "simulation"]

[dependencies]
foundationdb = { version = "0.9.2", path = "../foundationdb", default-features = false }
foundationdb-sys = { version = "0.9.1", path = "../foundationdb-sys", default-features = false }

[build-dependencies]
cc = "1.2.1"

[features]
default = ["embedded-fdb-include"]
fdb-7_1 = ["foundationdb/fdb-7_1", "foundationdb-sys/fdb-7_1"]
fdb-7_3 = ["foundationdb/fdb-7_3", "foundationdb-sys/fdb-7_3"]
fdb-docker = []
embedded-fdb-include = [
    "foundationdb/embedded-fdb-include",
    "foundationdb-sys/embedded-fdb-include",
]

[[example]]
name = "atomic"
path = "examples/atomic/lib.rs"
crate-type = ["cdylib"]
required-features = ["fdb-7_3", "fdb-docker"]

[dev-dependencies]
foundationdb-macros = { version = "0.3.2", path = "../foundationdb-macros", default-features = false }
