[package]
name = "foundationdb-simulation"
version = "0.2.3"
edition = "2021"
description = """
Embed Rust code within FoundationDB's simulation
"""
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/foundationdb-simulation"
repository = "https://github.com/foundationdb-rs/foundationdb-rs"
readme = "README.md"
keywords = ["foundationdb", "simulation"]

[dependencies]
foundationdb = { version = "0.9.3", path = "../foundationdb", default-features = false }
foundationdb-sys = { version = "0.9.2", path = "../foundationdb-sys", default-features = false }

[build-dependencies]
cc = "1.2.29"
bindgen = "0.72.0"

[features]
default = ["embedded-fdb-include"]
cpp-abi = []
fdb-7_1 = ["foundationdb/fdb-7_1", "foundationdb-sys/fdb-7_1", "cpp-abi"]
fdb-7_3 = ["foundationdb/fdb-7_3", "foundationdb-sys/fdb-7_3", "cpp-abi"]
fdb-7_4 = ["foundationdb/fdb-7_4", "foundationdb-sys/fdb-7_4"]
fdb-docker = []
embedded-fdb-include = [
    "foundationdb/embedded-fdb-include",
    "foundationdb-sys/embedded-fdb-include",
]

[[example]]
name = "atomic"
path = "examples/atomic/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "noop"
path = "examples/noop/lib.rs"
crate-type = ["cdylib"]
