[package]
name = "foundationdb-simulation"
version = "0.3.0"
authors = [
    "Eloi DEMOLIS <eloi.demolis@clever-cloud.com>",
    "Pierre Zemb <contact@pierrezemb.fr>"
]
edition = "2021"
description = """
Embed Rust code within FoundationDB's simulation
"""
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/foundationdb-simulation"
repository = "https://github.com/foundationdb-rs/foundationdb-rs"
readme = "README.md"
keywords = ["foundationdb", "simulation"]

[package.metadata.docs.rs]
features = ["embedded-fdb-include", "fdb-7_4"]

[dependencies]
foundationdb = { version = "0.11.0", path = "../foundationdb", default-features = false }
foundationdb-sys = { version = "0.10.1", path = "../foundationdb-sys", default-features = false }

[build-dependencies]
cc = "1.2.55"
bindgen = "0.72.1"

[dev-dependencies]
futures-util = "0.3.31"

[features]
default = ["embedded-fdb-include"]
cpp-abi = []
fdb-7_1 = ["foundationdb/fdb-7_1", "foundationdb-sys/fdb-7_1", "cpp-abi"]
fdb-7_3 = ["foundationdb/fdb-7_3", "foundationdb-sys/fdb-7_3", "cpp-abi"]
fdb-7_4 = ["foundationdb/fdb-7_4", "foundationdb-sys/fdb-7_4"]
fdb-docker = []
embedded-fdb-include = [
    "foundationdb/embedded-fdb-include",
    "foundationdb-sys/embedded-fdb-include",
]

[[example]]
name = "atomic"
path = "examples/atomic/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "noop"
path = "examples/noop/lib.rs"
crate-type = ["cdylib"]

[[example]]
name = "shared"
path = "examples/shared/lib.rs"
crate-type = ["cdylib"]
