[package]
name = "foundationdb"
version = "0.9.0"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
    "Pierre Zemb <contact@pierrezemb.fr>"
]
edition = "2021"
rust-version = "1.71"

description = """
High level client bindings for FoundationDB.
"""

documentation = "https://docs.rs/foundationdb"
repository = "https://github.com/foundationdb-rs/foundationdb-rs"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

[package.metadata.docs.rs]
features = ["embedded-fdb-include", "fdb-7_3", "uuid"]

[badges]
codecov = { repository = "foundationdb-rs/foundationdb-rs", branch = "main", service = "github" }

[features]
default = ["uuid"]
# Use the locally embedded foundationdb fdb_c.h and fdb.options files
embedded-fdb-include = [
    "foundationdb-sys/embedded-fdb-include",
    "foundationdb-gen/embedded-fdb-include",
]
fdb-5_1 = ["foundationdb-sys/fdb-5_1", "foundationdb-gen/fdb-5_1"]
fdb-5_2 = ["foundationdb-sys/fdb-5_2", "foundationdb-gen/fdb-5_2"]
fdb-6_0 = ["foundationdb-sys/fdb-6_0", "foundationdb-gen/fdb-6_0"]
fdb-6_1 = ["foundationdb-sys/fdb-6_1", "foundationdb-gen/fdb-6_1"]
fdb-6_2 = ["foundationdb-sys/fdb-6_2", "foundationdb-gen/fdb-6_2"]
fdb-6_3 = ["foundationdb-sys/fdb-6_3", "foundationdb-gen/fdb-6_3"]
fdb-7_0 = ["foundationdb-sys/fdb-7_0", "foundationdb-gen/fdb-7_0"]
fdb-7_1 = ["foundationdb-sys/fdb-7_1", "foundationdb-gen/fdb-7_1", "serde", "serde_json", "serde_bytes"]
fdb-7_3 = ["foundationdb-sys/fdb-7_3", "foundationdb-gen/fdb-7_3", "serde", "serde_json", "serde_bytes"]
tenant-experimental = []

[build-dependencies]
foundationdb-gen = { version = "0.9.0", path = "../foundationdb-gen", default-features = false }

[dependencies]
foundationdb-sys = { version = "0.9.0", path = "../foundationdb-sys", default-features = false }
foundationdb-macros = { version = "0.3.0", path = "../foundationdb-macros" }
futures = "0.3.30"
memchr = "2.7.4"
rand = { version = "0.8.5", features = ["default", "small_rng"] }
static_assertions = "1.1.0"
uuid = { version = "1.10.0", optional = true }
num-bigint = { version = "0.4.6", optional = true }
async-trait = "0.1.83"
async-recursion = "1.1.1"
# Required to deserialize tenant info
serde = { version = "1.0.210", features = ["derive"], optional = true}
serde_json = { version = "1.0.128", optional = true}
serde_bytes = { version = "0.11.15", optional = true}

[dev-dependencies]
byteorder = "1.5.0"
lazy_static = "1.5.0"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
ring = "0.17.8"
data-encoding = "2.6.0"
pretty-bytes = "0.2.2"
uuid = { version = "1.10.0", features = ["v4"] }
