[package]
name = "foundationdb"
version = "0.11.0"
authors = [
    "Benjamin Fry <benjaminfry@me.com>",
    "Vincent Rouillé <vincent@clikengo.com>",
    "Pierre Zemb <contact@pierrezemb.fr>"
]
edition = "2021"
rust-version = "1.85.1"

description = """
High level client bindings for FoundationDB.
"""

documentation = "https://docs.rs/foundationdb"
repository = "https://github.com/foundationdb-rs/foundationdb-rs"
license = "MIT/Apache-2.0"

readme = "README.md"
keywords = ["foundationdb", "kv"]
categories = ["database"]

[package.metadata.docs.rs]
features = ["embedded-fdb-include", "fdb-7_4", "uuid", "recipes"]

[badges]
codecov = { repository = "foundationdb-rs/foundationdb-rs", branch = "main", service = "github" }

[features]
default = ["uuid", "recipes"]
uuid = ["dep:uuid", "foundationdb-tuple/uuid"]
num-bigint = ["dep:num-bigint", "foundationdb-tuple/num-bigint"]
# Use the locally embedded foundationdb fdb_c.h and fdb.options files
embedded-fdb-include = [
    "foundationdb-sys/embedded-fdb-include",
    "foundationdb-gen/embedded-fdb-include",
]
fdb-5_1 = ["foundationdb-sys/fdb-5_1", "foundationdb-gen/fdb-5_1"]
fdb-5_2 = ["foundationdb-sys/fdb-5_2", "foundationdb-gen/fdb-5_2"]
fdb-6_0 = ["foundationdb-sys/fdb-6_0", "foundationdb-gen/fdb-6_0"]
fdb-6_1 = ["foundationdb-sys/fdb-6_1", "foundationdb-gen/fdb-6_1"]
fdb-6_2 = ["foundationdb-sys/fdb-6_2", "foundationdb-gen/fdb-6_2"]
fdb-6_3 = ["foundationdb-sys/fdb-6_3", "foundationdb-gen/fdb-6_3"]
fdb-7_0 = ["foundationdb-sys/fdb-7_0", "foundationdb-gen/fdb-7_0"]
fdb-7_1 = ["foundationdb-sys/fdb-7_1", "foundationdb-gen/fdb-7_1", "serde", "serde_json", "serde_bytes"]
fdb-7_3 = ["foundationdb-sys/fdb-7_3", "foundationdb-gen/fdb-7_3", "serde", "serde_json", "serde_bytes"]
fdb-7_4 = ["foundationdb-sys/fdb-7_4", "foundationdb-gen/fdb-7_4", "serde", "serde_json", "serde_bytes"]
tenant-experimental = []
recipes = ["recipes-leader-election"]
recipes-leader-election = []
trace = ["tracing"]

[build-dependencies]
foundationdb-gen = { version = "0.10.1", path = "../foundationdb-gen", default-features = false }

[dependencies]
foundationdb-sys = { version = "0.10.1", path = "../foundationdb-sys", default-features = false }
foundationdb-macros = { version = "0.3.4", path = "../foundationdb-macros" }
foundationdb-tuple = { version = "0.10.1", path = "../foundationdb-tuple" }
futures = "0.3.31"
rand = { version = "0.9.2", features = ["default", "small_rng"] }
static_assertions = "1.1.0"
uuid = { version = "1.20.0", optional = true }
num-bigint = { version = "0.4.6", optional = true }
async-trait = "0.1.89"
async-recursion = "1.1.1"
# Required to deserialize tenant info
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
serde_bytes = { version = "0.11.19", optional = true }
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
byteorder = "1.5.0"
lazy_static = "1.5.0"
tokio = { version = "1.49.0", features = ["full"] }
sha2 = "0.10.9"
data-encoding = "2.10.0"
bytesize = "2.3"
uuid = { version = "1.20.0", features = ["v4"] }
futures-util = "0.3.31"
tracing-subscriber = "0.3.22"
